--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@pauliescanlon/gatsby-mdx-embed": "0.0.17",
     "gatsby": "^2.20.12",
+    "gatsby-theme-blog": "^1.4.20",
+    "gatsby-theme-notes": "^1.2.19",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
